--- a/TombX.vcxproj
+++ b/TombX.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{D0EFB441-7F85-4ECD-A290-B1FE399F4410}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>TombXDLL</RootNamespace>
+    <RootNamespace>TombX</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ProjectName>TombX</ProjectName>
   </PropertyGroup>
@@ -149,13 +149,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
+    <ClInclude Include="src\stdafx.h" />
+    <ClInclude Include="src\targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Addresses.hpp" />
-    <ClCompile Include="TombX.cpp" />
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="src\Addresses.hpp" />
+    <ClCompile Include="src\TombX.cpp" />
+    <ClCompile Include="src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
